kubernetes/manifest/draft/stg/backend/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: app
        image: yoshi429/draft-backend:v-0.0.1
        ports:
        - containerPort: 8000
        volumeMounts:
          - mountPath: /usr/src/app/configs.yaml
            name: configs-yaml
            readOnly: true
            subPath: configs.yaml
      volumes:
          - name: configs-yaml
            configMap:
              name: backend-app-configs
