kubernetes/manifest/draft/stg/backend/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-db
  labels:
    app: backend-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-db
  template:
    metadata:
      labels:
        app: backend-db
    spec:
      containers:
      - name: backend-db
        image: postgres:14.4
        ports:
        - containerPort: 5432
        # TODO　ちゃんと設定する
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pv-claim
