kubernetes/manifest/draft/stg/backend/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-gateway
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: ./etc/nginx/nginx.conf
            name: nginx-conf
            readOnly: true
            subPath: nginx.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: backend-app-nginx-conf
