kubernetes/manifest/draft/stg/backend/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  selector:
    app: backend-app
  ports:
  - name: api-v1
    port: 8000
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
