kubernetes/manifest/draft/stg/backend/cache-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cache
spec:
  selector:
    app: backend-cache
  ports:
  - protocol: TCP
    port: 6379
  type: ClusterIP
