kubernetes/manifest/draft/stg/backend/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-db
spec:
  selector:
    app: backend-db
  ports:
  - protocol: TCP
    port: 5432
  type: LoadBalancer
